--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "seanchen.find_my_stuff"
         minSdkVersion 19
@@ -30,6 +29,8 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
+//    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.6' //11.8.0'//10.2.6
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
