--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,11 @@ buildscript {
 
 allprojects {
     repositories {
-//        maven {
-//            url "https://maven.google.com" // Google's Maven repository
-//        }
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
         jcenter()
+        google()
     }
 }
 
